tests/fixtures/invalid/const_array_typedef_compound_literal_write.c
int main(void) {
    typedef const int Scores[2];
    const int *scores = (Scores){1, 2};
    scores[0] = 9;
    return scores[0];
}
